# tp_Sudakov_Dmitry

./: .travis.yml  README.md  SOLUTION_DESCRIPTION.txt  ciphers.py  encryptor.py  hack.py  input.txt  load_test.py  model.txt  mycode.sh  stress_test.py  tester.py  text_1.txt  unit_test.py  usability.py
task_2/: CMakeLists.txt  build.sh
task_2/A/: preparing.py
task_2/B/: CMakeLists.txt  lib.cpp  lib.h
task_2/C/: main.cpp  main.h
task_3/: build_2.sh  build_on_pi.sh  raspberry_solution.txt  solution_decorator.txt
testsrc/: Crime_and_Punishment.txt  education.txt  master_and_margarita.txt  model_caesar.txt  model_vigenere.txt  text_2.txt
utest/: session_1.txt  session_2.txt
